--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Mi primer formulario</title>
 </head>
 <body>
-    
+    <header>
+        <H1>Formulario</H1>
+    </header>
+    <main>
+        <form action="">
+
+        </form>
+    </main>
 </body>
 </html>
